--- a/debian/terraform.d/control
+++ b/debian/terraform.d/control
@@ -5,14 +5,16 @@ Maintainer: Diogenes Oliveira <diogenes1oliveira@gmail.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.8
 Homepage: https://www.terraform.io
-Vcs-Git: https://github.com/hashicorp/terraform.git
-Vcs-Browser: https://github.com/hashicorp/terraform
+Vcs-Git: https://github.com/diogenes1oliveira/hashicorp-ppa.git
+Vcs-Browser: https://github.com/diogenes1oliveira/hashicorp-ppa
 
 Package: terraform
 Architecture: amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}, curl, unzip
-Description: Declarative multi-cloud infrastructure as code
+Description: Declarative infrastructure as code (download package)
   Terraform enables you to safely and predictably create, change, and improve
   infrastructure. It is an open source tool that codifies APIs into declarative
   configuration files that can be shared amongst team members, treated as code,
   edited, reviewed, and versioned.
+
+  This package simply downloads the ZIP files from Hashicorp's website.
