--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: sudo apt-get install -y bats
+      - name: Download Hashicorp GPG key
+        run: gpg --keyserver keyserver.ubuntu.com --recv-keys 51852D87348FFC4C
       - name: Generate the package
         run: make fetch && make generate && make docker/build
         env:
